--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,7 +9,7 @@ repos:
       rev: 4.0.1
       hooks:
       - id: flake8
-        args: ['--config=./pyproject.toml']
+        args: ['--config=./.flake8']
   -   repo: https://github.com/pre-commit/mirrors-isort
       rev: v5.10.1
       hooks:
